--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -18,55 +18,37 @@ env:
 jobs:
   ruff:
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v4
-    - name: Set up Python
-      uses: actions/setup-python@v5
+    - uses: actions/setup-python@v5
       with:
-        python-version: "3"
-    - name: Install pip
-      run: python -m pip install --upgrade pip
-
-    - name: Install Ruff
-      run: python -m pip install "ruff==0.5.2"
-
-    - name: Lint with Ruff
-      run: ruff check . --output-format github
-
-    - name: Format with Ruff
-      run: ruff format . --diff
+        python-version: "3.10"
+    - run: python -m pip install --upgrade pip
+    - run: python -m pip install .[lint]
+    - run: ruff check . --output-format github
+    - run: ruff format . --diff
 
   mypy:
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v4
-    - name: Set up Python
-      uses: actions/setup-python@v5
+    - uses: actions/setup-python@v5
       with:
-        python-version: "3"
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        python -m pip install ".[lint,test]"
-    - name: Type check with mypy
-      run: mypy
+        python-version: "3.10"
+    - run: python -m pip install --upgrade pip
+    - run: python -m pip install .[lint,test]
+    - run: mypy src/ tests/
 
   twine:
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v4
-    - name: Set up Python
-      uses: actions/setup-python@v5
+    - uses: actions/setup-python@v5
       with:
-        python-version: "3"
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        python -m pip install --upgrade twine build
-    - name: Lint with twine
-      run: |
+        python-version: "3.10"
+    - run: python -m pip install --upgrade pip
+    - run: python -m pip install --upgrade build twine
+    - run: |
+        rm -rf dist/
         python -m build .
         twine check dist/*
