--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -37,7 +37,7 @@ jobs:
         python-version: "3.10"
     - run: python -m pip install --upgrade pip
     - run: python -m pip install .[lint,test]
-    - run: mypy . docs/
+    - run: mypy . docs/ --exclude build/
 
   twine:
     runs-on: ubuntu-latest
