--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,3 +21,6 @@ lint = [
 [build-system]
 requires = ["setuptools>=78.1.0"]
 build-backend = "setuptools.build_meta"
+
+[tool.mypy]
+exclude = "build/"
