--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -26,7 +26,7 @@ jobs:
     - run: python -m pip install --upgrade pip
     - run: python -m pip install .[lint]
     - run: ruff check . --output-format github
-    - run: ruff format . --diff
+    - run: ruff format . --check
 
   mypy:
     runs-on: ubuntu-latest
@@ -37,7 +37,7 @@ jobs:
         python-version: "3.10"
     - run: python -m pip install --upgrade pip
     - run: python -m pip install .[lint,test]
-    - run: mypy . docs/ --exclude build/
+    - run: mypy --exclude 'build/' . docs/
 
   twine:
     runs-on: ubuntu-latest
