--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -26,6 +26,7 @@ jobs:
     - run: python -m pip install --upgrade pip
     - run: python -m pip install .[lint]
     - run: ruff check . --output-format github
+    - run: ruff format .
     - run: ruff format . --check
 
   mypy:
@@ -37,7 +38,7 @@ jobs:
         python-version: "3.10"
     - run: python -m pip install --upgrade pip
     - run: python -m pip install .[lint,test]
-    - run: mypy
+    - run: mypy . docs/ --exclude build/
 
   twine:
     runs-on: ubuntu-latest
