--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -38,7 +38,7 @@ jobs:
         python-version: "3.10"
     - run: python -m pip install --upgrade pip
     - run: python -m pip install .[lint,test]
-    - run: mypy . docs/ --exclude build/
+    - run: mypy . --exclude '(build|docs)/'
 
   twine:
     runs-on: ubuntu-latest
