--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -16,38 +16,22 @@ env:
   FORCE_COLOR: "1"
 
 jobs:
-  ruff:
+  lint:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
     - uses: actions/setup-python@v5
       with:
         python-version: "3.10"
-    - run: python -m pip install --upgrade pip
-    - run: python -m pip install .[lint]
-    - run: ruff check . --output-format github
-    - run: ruff format .
-    - run: ruff format . --check
 
-  mypy:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v4
-    - uses: actions/setup-python@v5
-      with:
-        python-version: "3.10"
     - run: python -m pip install --upgrade pip
     - run: python -m pip install .[lint,test]
-    - run: mypy . --exclude '(build|docs)/'
 
-  twine:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v4
-    - uses: actions/setup-python@v5
-      with:
-        python-version: "3.10"
-    - run: python -m pip install --upgrade pip
+    - run: ruff check .
+    - run: ruff format . --check
+
+    - run: mypy . docs/ --exclude build/
+
     - run: python -m pip install --upgrade build twine
     - run: |
         rm -rf dist/
