--- a/mypy.ini
+++ b/mypy.ini
@@ -1,2 +1,10 @@
 [mypy]
-exclude = build/
+python_version = 3.10
+warn_return_any = True
+warn_unused_configs = True
+disallow_untyped_defs = True
+ignore_missing_imports = True
+exclude = ^build/
+
+[mypy-docs.*]
+ignore_errors = True
