--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -8,14 +8,21 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
+    concurrency:
+      group: ${{ github.workflow }}-${{ github.ref }}
 
     steps:
     - uses: actions/checkout@v4
+      with:
+        submodules: true
+        fetch-depth: 0
 
     - name: Setup Python
       uses: actions/setup-python@v5
       with:
-        python-version: "3"
+        python-version: "3.10"
 
     - name: Install dependencies
       run: |
@@ -27,8 +34,17 @@ jobs:
         cd docs
         make html
 
+    - name: Prepare tag
+      id: prepare_tag
+      if: startsWith(github.ref, 'refs/tags/')
+      run: |
+          echo "DEPLOY_TAG_NAME=deploy-${TAG_NAME}" >> "${GITHUB_OUTPUT}"
+
     - name: Deploy to GitHub Pages
-      uses: peaceiris/actions-gh-pages@v4.0.0
+      uses: peaceiris/actions-gh-pages@373f7f263a76c20808c831209c920827a82a2847
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_dir: docs/_build/html
+        enable_jekyll: true
+        commit_message: ${{ github.event.head_commit.message }}
+        
