--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,7 +1,7 @@
 version: 2
 updates:
   - package-ecosystem: "pip"
-    directory: "/"  # Root project
+    directory: "/"
     schedule:
       interval: "weekly"
     labels:
