--- a/ruff.toml
+++ b/ruff.toml
@@ -1,13 +1,12 @@
+[tool.ruff]
 line-length = 88
+indent-width = 4
 target-version = "py310"
+exclude = ["docs/_build", "docs/requirements.txt"]
 
-[format]
-quote-style = "double"
-
-[lint]
+[tool.ruff.lint]
 select = ["ALL"]
 ignore = [
-  "D100",
-  "D101",
-  "D102",
+    "D",
+    "ANN",
 ]
