--- a/mypy.ini
+++ b/mypy.ini
@@ -4,7 +4,7 @@ warn_return_any = True
 warn_unused_configs = True
 disallow_untyped_defs = True
 ignore_missing_imports = True
-exclude = ^build/
+exclude = docs/_build
 
 [mypy-docs.*]
 ignore_errors = True
