--- a/mypy.ini
+++ b/mypy.ini
@@ -1,10 +1,10 @@
 [mypy]
-python_version == '3.10'
-warn_return_any = True
-warn_unused_configs = True
-disallow_untyped_defs = True
-ignore_missing_imports = True
+python_version = 3.10
+warn_return_any = true
+warn_unused_configs = true
+disallow_untyped_defs = true
+ignore_missing_imports = true
 exclude = ^(docs/_build/|build/)
 
 [mypy-docs.*]
-ignore_errors = True
+ignore_errors = true
