--- a/ruff.toml
+++ b/ruff.toml
@@ -25,14 +25,14 @@ exclude = [
     "node_modules",
     "site-packages",
     "venv",
+    "docs/_build",
+    "docs/requirements.txt",
 ]
 
 
 line-length = 88
 indent-width = 4
 target-version = "py39"
-
-exclude = ["docs/_build", "docs/requirements.txt"]
 
 [lint]
 select = ["E4", "E7", "E9", "F"]
