--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -28,7 +28,7 @@ jobs:
     - run: python -m pip install .[lint,test]
 
     - run: ruff check .
-    - run: ruff format . --check
+    - run: ruff format .
 
     - run: mypy . docs/ --exclude build/
 
